# systemupdate-web

./: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  MIGRATION_SUCCESS.md  Makefile  OPTIMIZATION_SUMMARY.md  README.md  TEST_GUIDE.md  compose.merged.yml  docker-compose.gateway.yml  docker-compose.keycloak.yml  docker-compose.monitoring.yml  docker-compose.opa.yml  docker-compose.prod.yml  docker-compose.sample-consumer.yml  docker-compose.smoke.yml  docker-compose.yml  mypy.ini  pytest.ini  requirements-logging.txt  rules.json
app/: __init__.py  logging_config.py
docs/: ALERTING.md  AUTH_GUIDE.md  DEV_GATEWAY.md  EVENTS.md  EXECUTION_CHECKLIST.md  HEALTH_CHECKS.md  IDEMPOTENCY.md  LOGGING.md  MONITORING.md  OPS.md  PROJECT_COMPLETION_REPORT.md  README.md  REAL_TESTS_PREP.md  REMAINING_TASKS_BACKLOG.md  ROADMAP.md  STRATEGY.md  SYSTEMUPDATE_WEB_ARCHITECTURE.md  TEST_GUIDE.md  (+4 more)
services/auth-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/auth-service/.hypothesis/constants/: 2d0092970406845f  30264370e4bcf67b  7746486384cc67c7  8257f7236ddee2dd  8d3bd6654a5a0b64  90992711661af9f1
services/auth-service/.hypothesis/tmp/: tmp34x_nvjt  tmpcrctys5c  tmpcymdfj75  tmpdj8x7gab  tmpfixe7s6y  tmpns_blmmh  tmpqiiw_ipf  tmpqzwjanhd
services/auth-service/app/: __init__.py  config.py  main.py  otel.py  policy.py  security.py
services/auth-service/tests/: conftest.py  test_app.py  test_contract_auth.py  test_docker_smoke.py  test_error_formatting.py  test_health_middleware.py  test_jwt_and_otel_imports.py  test_security_and_policy.py
(+313 files in other folders)
