[project]
name = "auth-service"
version = "0.1.0"
description = "SystemUpdate Auth Service (FastAPI, async)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-jose[cryptography]>=3.3.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
